Update .env.sample with sqlserver database url, update tiny_tds gem version to fix heroku deploy issue

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 DATABASE_URL=mysql2://root@localhost/abp_report_connector_development
-SPREE_WEB_DATABASE_URL=mysql2://root@localhost/abp_development
+# sqlserver://sa:StrongPassword!@localhost/abp_report_connector_development
