Ignore config/master.key for storing credentials

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,8 @@ yarn-debug.log*
 /storage
 #config/storage.yml
 coverage
+
+
+-# Ignore master key for decrypting credentials and more.
+config/master.key
+
