--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ capybara-*.html
 /log
 /tmp
 /public/system
+/public/assets
 /coverage/
 /spec/tmp
 /config/database.yml
@@ -39,11 +40,6 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
-# config/initializers/secret_token.rb
-# config/secrets.yml
-
-### SublimeText ###
 # cache files for sublime text
 *.tmlanguage.cache
 *.tmPreferences.cache
@@ -116,3 +112,5 @@ coverage
 -# Ignore master key for decrypting credentials and more.
 config/master.key
 
+
+/config/master.key
