Update the env config to force_ssl and nginx sample config file.

--- a/config/nginx_sample.conf
+++ b/config/nginx_sample.conf
@@ -1,15 +1,20 @@
-upstream abp-connector {
-  server unix:///home/ubuntu/abp-report-connector/tmp/puma.sock;
+# Force SSL for rails app using puma with Nginx and Let's encrypt
+upstream abp-report {
+  server unix:///home/ubuntu/apps/abp-report/shared/tmp/sockets/abp-report-puma.sock;
 }
 
+# We need to be listing for port 80 (HTTP traffic).
+# The force_ssl option will redirect to port 443 (HTTPS)
 server {
   listen 80;
+
+  # Update this to your server_name
   server_name connect.herbdoc.com;
 
-  # path for static files
-  root /home/ubuntu/abp-report-connector/public;
-  access_log /home/ubuntu/abp-report-connector/log/nginx.access.log;
-  error_log /home/ubuntu/abp-report-connector/log/nginx.error.log info;
+  # Update the path to the project
+  root /home/ubuntu/apps/abp-report/current/public;
+  access_log /home/ubuntu/apps/abp-report/shared/log/nginx.access.log;
+  error_log /home/ubuntu/apps/abp-report/shared/log/nginx.error.log info;
 
   location ^~ /assets/ {
     gzip_static on;
@@ -17,16 +22,62 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @abp-connector;
-
-  location / {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    proxy_pass http://abp-connector;
-  }
+  try_files $uri/index.html $uri @abp-report;
 
   error_page 500 502 503 504 /500.html;
   client_max_body_size 10M;
   keepalive_timeout 10;
+
+  # Don't forget to udpate the location to upstream
+  location @abp-report {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    proxy_pass http://abp-report;
+  }
+
+  if ($host = connect.herbdoc.com) {
+      return 301 https://$host$request_uri;
+  } # managed by Certbot
+}
+
+# This is the configuration for port 443 (HTTPS)
+server {
+  listen 443 ssl;
+
+  # Update this to your server_name
+  server_name connect.herbdoc.com;
+
+  # Update the path to the project
+  root /home/ubuntu/apps/abp-report/current/public;
+  access_log /home/ubuntu/apps/abp-report/shared/log/nginx.access_ssl.log;
+  error_log /home/ubuntu/apps/abp-report/shared/log/nginx.error_ssl.log info;
+
+  location ^~ /assets/ {
+    gzip_static on;
+    expires max;
+    add_header Cache-Control public;
+  }
+
+  try_files $uri/index.html $uri @abp-report;
+
+  error_page 500 502 503 504 /500.html;
+  client_max_body_size 10M;
+  keepalive_timeout 10;
+
+  # Don't forget to udpate the location to upstream
+  location @abp-report {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # This is an important line to help fix some redirect issues.
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://abp-report;
+  }
+
+  # The following is most likely added by Certbot. Change the path to the ssl certs.
+  ssl_certificate /etc/letsencrypt/live/beta.herbdoc.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/beta.herbdoc.com/privkey.pem; # managed by Certbot
+  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
